--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -63,13 +63,13 @@
 }
 .jumbotron {
   text-align: center;
-  background-image: asset-url('vi.jpg');
+  background-image: asset-url('1.jpg');
   background-size: cover;
   color: #fff;
   font-family: 'Helvetica Neue' !important;
   font-stretch: expanded;
-  padding-top: 25px;
-  padding-bottom: 25px;
+  padding-top: 2px;
+  padding-bottom: 2px;
   margin-left: 15px;
   margin-right: 15px;
   text-shadow: -1px 0 #555, 0 1px #555, 1px 0 #555, 0 -1px #555;
